5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1671_1872.log
== TEST (2019-04-24 15:51:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenada x:"))
y = float(input("coordenada y:"))

if ((x > 0) and (y > 0)):
	print("Q1")
elif((x > 0) and (y > 0)):
	print("Q2")
elif((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) and (y > 0)):
	print("Q4")
elif((x== y) and (y == 0)):
	print("Origem")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:53:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenada x:"))
y = float(input("coordenada y:"))

if ((x > 0) and (y > 0)):
	print("Q1")
elif((x > 0) and (y > 0)):
	print("Q2")
elif((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) and (y > 0)):
	print("Q4")
elif((x !=0) and (y == 0):
	print("Eixo X")
elif((x == 0) and (y !=0)):
	print("Eixo Y")
else:
	print("Origem")
-- ERROR:
File "XXXX", line 13
    elif((x !=0) and (y == 0):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:53:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenada x:"))
y = float(input("coordenada y:"))

if ((x > 0) and (y > 0)):
	print("Q1")
elif((x > 0) and (y > 0)):
	print("Q2")
elif((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) and (y > 0)):
	print("Q4")
elif((x !=0) and (y == 0)):
	print("Eixo X")
elif((x == 0) and (y !=0)):
	print("Eixo Y")
else:
	print("Origem")
-- OUTPUT:
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:53:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenada x:"))
y = float(input("coordenada y:"))

if ((x > 0) and (y > 0)):
	print("Q1")
elif((x > 0) and (y > 0)):
	print("Q2")
elif((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) and (y > 0)):
	print("Q4")
elif((x !=0) and (y == 0)):
	print("Eixo X")
elif((x == 0) and (y !=0)):
	print("Eixo Y")
else:
	print("Origem")
-- EXECUTION TIME:
0.164
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:53:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenada x:"))
y = float(input("coordenada y:"))

if ((x > 0) and (y > 0)):
	print("Q1")
elif((x > 0) and (y > 0)):
	print("Q2")
elif((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) and (y > 0)):
	print("Q4")
elif((x !=0) and (y == 0)):
	print("Eixo X")
elif((x == 0) and (y !=0)):
	print("Eixo Y")
else:
	print("Origem")
-- OUTPUT:
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:54:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenada x:"))
y = float(input("coordenada y:"))

if ((x > 0) and (y > 0)):
	print("Q1")
elif((x > 0) and (y > 0)):
	print("Q2")
elif((x < 0) and (y < 0)):
	print("Q3")
elif ((x < 0) and (y > 0)):
	print("Q4")
elif((x !=0) and (y == 0)):
	print("Eixo X")
elif((x == 0) and (y !=0)):
	print("Eixo Y")
else:
	print("Origem")
-- OUTPUT:
Origem
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:25:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenada x:"))
y = float(input("coordenada y:"))

if ((x > 0) and (y > 0)):
	print("Q1")
elif((x < 0) and (y > 0)):
	print("Q2")
elif((x < 0) and (y < 0)):
	print("Q3")
elif ((x > 0) and (y < 0)):
	print("Q4")
elif((x != 0) and (y == 0)):
	print("Eixo X")
elif((x == 0) and (y !=0)):
	print("Eixo Y")
else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:26:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenada x:"))
y = float(input("coordenada y:"))

if ((x > 0) and (y > 0)):
	print("Q1")
elif((x < 0) and (y > 0)):
	print("Q2")
elif((x < 0) and (y < 0)):
	print("Q3")
elif ((x > 0) and (y < 0)):
	print("Q4")
elif((x != 0) and (y == 0)):
	print("Eixo X")
elif((x == 0) and (y !=0)):
	print("Eixo Y")
else:
	print("Origem")
-- EXECUTION TIME:
0.160788
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
